making it actually work

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -59,7 +59,8 @@
           <td class="calendar__day-column">
             <div class="calendar__day-column-inner">
               <div class="calendar__day-inner-panel">
-                <div class="calendar__day-event" ng-repeat="item in scheduledItems" style="top: {{item.start}}px; height: {{item.duration}}px">
+                <div class="calendar__day-event" ng-repeat="item in scheduledItems" style="top: {{item.start}}px; left: {{item.offsetLeft}}; width: {{item.width}}; height: {{item.height}}">
+                  <h4>{{item.name}}</h4>
                   {{item.start}} - {{item.end}} and lasts {{item.duration}} minutes
                 </div>
               </div>
