adding styling and typography

--- a/app/styles/base/_variables.scss
+++ b/app/styles/base/_variables.scss
@@ -1,2 +1,14 @@
+//
+// colours
+// ------------------------------
+$white: #fff;
+$color-border-light-grey: #e5e5e5;
 $color-border-grey: #ddd;
-$color-event-orange: #f88015;
+$color-event: #fd6666;
+$color-event-box-shadow: #ce4c4c;
+$color-wallpaper: #fdfbf1;
+
+//
+// Grid & Breakpoints
+// ------------------------------
+$widebreak: 768px;
