--- a/app/styles/components/_calendar.scss
+++ b/app/styles/components/_calendar.scss
@@ -1,9 +1,15 @@
 .calendar {
-  table-layout: fixed;
   width: 100%;
 
   &__day-time-indicator {
+    border-right: 1px solid $color-border-grey;
+    border-top: 1px solid $color-border-grey;
     height: 60px;
+    text-align: center;
+
+    @include widebreak-up {
+      width: 90px;
+    }
   }
 
   &__day-column {
@@ -15,20 +21,43 @@
   }
 
   &__day-inner-panel {
-    position: relative;
     height: 500px;
+    position: relative;
   }
 
   &__day-event {
-    background: $color-event-orange;
-    padding: 2rem;
+    background: $color-event;
+    border-radius: 2px;
+    border: 1px solid $color-event-box-shadow;
+    box-shadow: 0 3px 0 $color-event-box-shadow;
+    color: $white;
+    font-family: inherit;
+    font-size: .875rem;
+    font-style: normal;
+    font-weight: 600;
+    letter-spacing: .1em;
+    line-height: normal;
+    outline: 0;
+    padding: .7em 2em;
     position: absolute;
     width: 100%;
-    border-radius: 10px;
   }
 
-  &__hour-label {
-    width: 50px;
+  &__table-body {
+    border: 1px solid $color-border-grey;
+    border-width: 0 1px;
+  }
+
+  &__table-main-label {
+    @include header-font;
+    font-size: 32px;
+    padding: 10px;
+    padding-left: 0;
+    margin-top: 0;
+  }
+
+  &__head-label {
+    color: $color-wallpaper;
   }
 
   &__event-label {
@@ -45,6 +74,7 @@
 
   &__bg-rows-inner {
     position: absolute;
+    top: 1px;
     width: 100%;
   }
 
