--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,73 +1,48 @@
-<div class="row">
-  <div class="calendar">
-    <table class="calendar">
-      <thead>
-        <tr>
-          <td class="calendar__hour-label">
-            Hour
-          </td>
-          <td class="calendar__event-label">
-            Events
-          </td>
-        </tr>
-      </thead>
-      <tbody>
-        <tr height="1">
-          <td class="calendar__gutter"></td>
-          <td colspan="5">
-            <div class="calendar__bg-rows">
-              <div class="calendar__bg-rows-inner">
-                <div class="calendar__bg-row ext-row-1" style="height:60px;">
-                  <div class="calendar__bg-row-div " style="height:30px;"></div>
-                </div>
-                <div class="calendar__bg-row ext-row-2" style="height:60px;">
-                  <div class="calendar__bg-row-div " style="height:30px;"></div>
-                </div>
-                <div class="calendar__bg-row ext-row-3" style="height:60px;">
-                  <div class="calendar__bg-row-div " style="height:30px;"></div>
-                </div>
-                <div class="calendar__bg-row ext-row-4" style="height:60px;">
-                  <div class="calendar__bg-row-div " style="height:30px;"></div>
-                </div>
-                <div class="calendar__bg-row ext-row-5" style="height:60px;">
-                  <div class="calendar__bg-row-div " style="height:30px;"></div>
-                </div>
-                <div class="calendar__bg-row ext-row-6" style="height:60px;">
-                  <div class="calendar__bg-row-div " style="height:30px;"></div>
-                </div>
-                <div class="calendar__bg-row ext-row-7" style="height:60px;">
-                  <div class="calendar__bg-row-div " style="height:30px;"></div>
-                </div>
-                <div class="calendar__bg-row ext-row-8" style="height:60px;">
-                  <div class="calendar__bg-row-div " style="height:30px;"></div>
-                </div>
-                <div class="calendar__bg-row ext-row-9" style="height:60px;">
-                  <div class="calendar__bg-row-div " style="height:30px;"></div>
-                </div>
+<div class="calendar">
+  <h2 class="calendar__table-main-label">Events</h2>
+  <table class="calendar">
+    <thead>
+      <tr>
+        <td class="calendar__head-label">
+          Hour
+        </td>
+        <td class="calendar__head-label">
+          Events
+        </td>
+      </tr>
+    </thead>
+    <tbody class="calendar__table-body">
+      <tr height="1">
+        <td class="calendar__gutter"></td>
+        <td colspan="5">
+          <div class="calendar__bg-rows">
+            <div class="calendar__bg-rows-inner">
+              <div class="calendar__bg-row" style="height:60px;" ng-repeat="item in [1,2,3,4,5,6,7,8,9]">
+                <div class="calendar__bg-row-div " style="height:30px;"></div>
               </div>
             </div>
-          </td>
-        </tr>
-        <tr>
-          <td class="calendar__day-times">
-            <div class="calendar__day-time-indicator" ng-repeat="timeslot in workingHours">
-              <span class="calendar__day-time-inner">
-                {{timeslot.time | meridiem}}
-              </span>
-            </div>
-          </td>
-          <td class="calendar__day-column">
-            <div class="calendar__day-column-inner">
-              <div class="calendar__day-inner-panel">
-                <div class="calendar__day-event" ng-repeat="item in scheduledItems" style="top: {{item.start}}px; left: {{item.offsetLeft}}; width: {{item.width}}; height: {{item.height}}">
-                  <h4>{{item.name}}</h4>
-                  {{item.start}} - {{item.end}} and lasts {{item.duration}} minutes
-                </div>
+          </div>
+        </td>
+      </tr>
+      <tr>
+        <td class="calendar__day-times">
+          <div class="calendar__day-time-indicator" ng-repeat="timeslot in workingHours">
+            <span class="calendar__day-time-inner">
+              {{timeslot.time | meridiem}}
+            </span>
+          </div>
+        </td>
+        <td class="calendar__day-column">
+          <div class="calendar__day-column-inner">
+            <div class="calendar__day-inner-panel">
+              <div class="calendar__day-event" ng-repeat="item in scheduledItems" style="top: {{item.start}}px; left: {{item.offsetLeft}}; width: {{item.width}}; height: {{item.height}}">
+                <h4>{{item.name}}</h4>
+                {{item.start}} - {{item.end}} and lasts {{item.duration}} minutes
               </div>
             </div>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
+          </div>
+        </td>
+      </tr>
+    </tbody>
+  </table>
 </div>
