adding more styling

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -37,7 +37,8 @@
             <div class="calendar__day-inner-panel">
               <div class="calendar__day-event" ng-repeat="item in scheduledItems" style="top: {{item.start}}px; left: {{item.offsetLeft}}; width: {{item.width}}; height: {{item.height}}">
                 <h4>{{item.name}}</h4>
-                {{item.start}} - {{item.end}} and lasts {{item.duration}} minutes
+                <p>{{item.start}} - {{item.end}}<p>
+                <p>{{item.duration}} minutes</p>
               </div>
             </div>
           </div>
