--- a/app/styles/components/_calendar.scss
+++ b/app/styles/components/_calendar.scss
@@ -38,8 +38,11 @@
     letter-spacing: .1em;
     line-height: normal;
     outline: 0;
+    overflow: hidden;
     padding: .7em 2em;
     position: absolute;
+    text-overflow: ellipsis;
+    white-space: nowrap;
     width: 100%;
   }
 
@@ -53,7 +56,7 @@
     font-size: 32px;
     padding: 10px;
     padding-left: 0;
-    margin-top: 0;
+    margin: 0;
   }
 
   &__head-label {
