--- a/app/styles/components/_navbar.scss
+++ b/app/styles/components/_navbar.scss
@@ -1,3 +1,19 @@
+.header {
+  border-bottom: 1px solid $color-border-light-grey;
+
+  @include widebreak-up {
+    margin-bottom: 10px;
+    padding-left: 20px;
+  }
+
+  h3 {
+    line-height: 40px;
+    margin-bottom: 0;
+    margin-top: 0;
+    padding-bottom: 19px;
+  }
+}
+
 .navbar {
   background-color: transparent;
   border: 0;
